@@ -7,7 +7,7 @@ Core Developers
 ===============
 
 - Jan Schneider <jan@horde.org>
-
+- Ralf Lang <lang@b1-systems.de>
 
 Localization
 ============
