@@ -26,3 +26,7 @@ Cheers,
 Coleman
 mercury [at] appisolutions [dot] net
 
+* Horde 5 Ajax view
+* Utilisation of the Rdo driver's enhanced search capabilities
+
+Ralf Lang
