@@ -2,8 +2,11 @@
 v1.0-git
 --------
 
+[rla] Use Horde_View in place of Horde_Template
+[rla] change backend from Sql driver to Rdo driver with enhanced search
+      capabilities
 [jan] Add Finnish translation (Leena Heino <liinu@uta.fi>).
-[rla] Converted to Horde 4 Framework
+[rla] Convert to Horde 5 Framework
 [jan] Add Latvian translation (Jānis Eisaks).
 [cjh] Add sort priorities to categories.
 [cjh] Add a preference for showing properties on the Stock List.
